FE - More fixes for 2.1
Fixes #4330
Fixes #4333
Fix missing space between "Resides on" and the number of resources
Fix  Separator line color is too light, it should be color 7 (the same
color we use everywhere else)
Fix clock icon should be closer to the “last updated” text
Fix Current filter does not match any host" - change to node
Fix missing schema checks for object parts reducer
Fix missing schema checks for objects reducer
Fix object bar chart for big files - replace with not available message
Dispose of old unused code (FE old arch)

--- a/frontend/src/app/components/bucket/bucket-quota-policy-form/bucket-quota-policy-form.less
+++ b/frontend/src/app/components/bucket/bucket-quota-policy-form/bucket-quota-policy-form.less
@@ -2,4 +2,8 @@
 
 bucket-quota-policy-form {
     display: block;
+
+    vr {
+        background-color: @color7;
+    }
 }
